--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,203 @@
 body{
-    background-color: blue;
+    margin:0;
+    text-align:center;
+    font-family:"Montserrat",sans-serif;
+    background-color: #e7e1f9;
+
+}
+
+
+h1{
+    margin:50px auto 0px auto;
+    font-family:"Open Sans", sans-serif;
+    font-size:5.625rem;
+    line-height:2;
+}
+
+h2{
+    font-size: 2.5rem;
+    padding-bottom:10px;
+}
+
+
+h1, h2{
+    color:#5f6069;
+}
+
+h3{
+    color:#05a515;
+}
+
+hr{
+    border-top: 5px dotted #0fd223ad;
+    margin:100px auto;
+    width:4%;
+}
+
+p{
+    color:#575758;
+    font-weight:normal;
+    line-height: 2;
+}
+
+.nav-container{
+    background-color:#0fd223ad;
+}
+
+
+.navbar{
+    background-color:#0fd223ad;
+    overflow: hidden;
+    display:inline-block;
+}
+
+.navbar a{
+    text-decoration: none;
+    list-style-type: none;
+    float: left;
+    display:block;
+    text-align:center;
+    font-size:1.5rem;
+    padding:14px 16px;
+    color:#1a1918;
+}
+
+.navbar a.active{
+   background-color:#e7e1f9;
+}
+
+.navbar a:hover{
+    background-color:#e7e1f9;
+}
+
+.top-container{
+    background-color:#e7e1f9;
+    position:relative;
+    padding:100px;
+    margin: 0px auto 100px;
+}
+
+.intro{
+    width:30%;
+    margin:auto;
+}
+
+.middle-container{
+    background-color:#e7e1f9;
+    margin:100px 0;
+
+}
+
+#profile img{
+    height:250px;
+    width: 250px;
+    border-radius:50%;
+}
+
+
+.code{
+    width:25%;
+    float:left;
+    margin-right:30px;
+}
+
+.phone{
+    width:25%;
+    float:right;
+    margin-left:30px;
+}
+
+.skill-row{
+    width:50%;
+    margin:100px auto;
+    text-align:left;
+}
+
+.contact-form-container{
+    margin:0;
+}
+
+.contact-form{
+    resize: vertical;
+    width: 100%;
+    padding: 10px 20px 50px;
+    margin: 8px 0;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.contact-form label{
+  color: #0c9e1b;
+  font-weight:bold;
+
+}
+
+#message {
+    width:50%;
+    position: relative;
+    top:10px;
+    left:15px;
+  
+}
+
+#submit{
+    display:block;
+    cursor: pointer;
+    position:relative;
+    margin:10px 600px;
+}
+
+.bottom-container{
+    margin-top:50px;
+    padding-top:10px;
+    padding-bottom:20px;
+    background-color:#0fd223ad;
+}
+
+.bottom-container h3{
+    margin-bottom:20px;
+}
+
+.btn {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #0fd222), color-stop(1, #05a515) );
+	background:-moz-linear-gradient( center top, #0fd222 5%, #05a515 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0fd222', endColorstr='#05a515');
+	background-color:#0fd222;
+	-webkit-border-top-left-radius:10px;
+	-moz-border-radius-topleft:10px;
+	border-top-left-radius:10px;
+	-webkit-border-top-right-radius:10px;
+	-moz-border-radius-topright:10px;
+	border-top-right-radius:10px;
+	-webkit-border-bottom-right-radius:10px;
+	-moz-border-radius-bottomright:10px;
+	border-bottom-right-radius:10px;
+	-webkit-border-bottom-left-radius:10px;
+	-moz-border-radius-bottomleft:10px;
+	border-bottom-left-radius:10px;
+text-indent:0;
+	display:inline-block;
+	color:#fcfcfc;
+	font-family:arial;
+	font-size:15px;
+	font-weight:bold;
+	font-style:normal;
+height:50px;
+	line-height:50px;
+width:140px;
+	text-decoration:none;
+	text-align:center;
+	text-shadow:0px 1px 0px #283966;
+}.btn:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #05a515), color-stop(1, #0fd222) );
+	background:-moz-linear-gradient( center top, #05a515 5%, #0fd222 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#05a515', endColorstr='#0fd222');
+	background-color:#05a515;
+}.btn:active {
+	position:relative;
+	top:1px;
+}
+.footer-icon{
+    height:30px;
+    width:30px;
 }
