--- a/css/styles.css
+++ b/css/styles.css
@@ -1,206 +1,142 @@
+/* Universal Styles */
+*{
+    color:#E8DED2;
+}
+
 body{
-    margin:0;
-    text-align:center;
-    font-family:"Montserrat",sans-serif;
-    background-color: #e7e1f9;
+    background-color:#056676;
     background-image:url("../Images/shattered.png");
-
+    text-align:center;
+    
 }
+/* Headings */
 
-a{
-    font-family:"Montserrat",sans-serif;
-    text-decoration:none;
-    color:#05a515;
-}
-
-
-h1{
-    margin:50px auto 0px auto;
-    font-family:"Open Sans", sans-serif;
-    font-size:5.625rem;
-    line-height:2;
-}
-
-h2{
-    font-size: 2.5rem;
-    padding-bottom:10px;
-}
-
-
-h1, h2{
-    color:#5f6069;
-}
-
-h3{
-    color:#05a515;
-}
-
-hr{
-    border-top: 5px dotted #0fd223ad;
-    margin:100px auto;
-    width:4%;
-}
-
-p{
-    color:#575758;
-    font-weight:normal;
-    line-height: 2;
-}
-
-.nav-container{
-    background-color:#0fd223ad;
-
-}
-
-
+/* NavBar */
 .navbar{
-    background-color:#0fd223ad;
-    overflow: hidden;
-    display:inline-block;
- 
+    height: 100%;
+    width:0;
+    position: fixed;
+    z-index:1;
+    top:0;
+    left:0;
+    background-color:#056676;
+    overflow-x: hidden;
+    padding-top:60px;
+    transition:0.5s;
 
 }
 
-.navbar a{
-    text-decoration: none;
-    list-style-type: none;
-    float: left;
+.closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+.nav-link{
+    padding: 8px 8px 8px 32px;
     display:block;
-    text-align:center;
-    font-size:1.5rem;
-    padding:14px 16px;
-    color:#1a1918;
+    text-decoration: none;
+    font-size: 25px;
+    transition: 0.3s;
 }
 
-.navbar a.active{
-   background-color:#e7e1f9;
+.social-icon{
+    height:30px;
 }
 
-.navbar a:hover{
-    background-color:#e7e1f9;
-}
 
-.top-container{
-    background-color:#e7e1f9;
-    position:relative;
-    padding:100px;
-    margin: 0px auto 100px;
+/* Containers */
+
+/* About Section */
+.about-container{
+    background-color:#056676;
+    margin:0 auto 100px;
+    padding: 7% 13%;
     background-image:url("../Images/shattered.png");
+    position:absolute;
+}
+
+.profile{
+    text-align:center;
+    position:relative;
+    bottom:100px;
+}
+
+.nick{
+    height:300px;
+    border-radius:50%;
+    position:relative;
+    top:50px;
+}
+
+.greeting{
+    position:relative;
+    top:40px;
 }
 
 .intro{
-    width:30%;
-    margin:auto;
+    position:relative;
+    margin:80px 150px 0px;
 }
 
-.middle-container{
-    background-color:#e7e1f9;
-    margin:100px 0;
+.cv{
+
+}
+
+/* Projects Section */
+
+.project-container{
+    background-color:#056676;
+    padding:7% 13%;
     background-image:url("../Images/shattered.png");
+    position:relative;
+    top:600px
 
 }
 
-#profile img{
-    height:300px;
-    width: 250px;
-    border-radius:50%;
+/* Skills*/
+
+.skill-container{
+    width:50%;
 }
 
-
-.code{
-    width:25%;
+.skill-image{
+    height:100px;
+    width:100px;
     float:left;
-    margin-right:30px;
-}
-
-.phone{
-    width:25%;
-    float:right;
-    margin-left:30px;
+    margin-right:100px;
 }
 
 .skill-row{
-    width:50%;
-    margin:100px auto;
+    margin-top:100px;
+}
+
+.skill-heading{
+margin-left:150px;
+text-align:left;
+}
+
+.skill-text{
+    margin-left:150px;
     text-align:left;
 }
 
-.contact-me{
-    height:400px;
-    margin:auto;
-}
+/* Projects Carousels */
 
-#contact-btn{
-margin-top:50px;
-}
+/* Contact Section */
 
-.contact-form-container{
-    margin: -70px auto 0px;
-}
-
-.contact-form{
-    resize: vertical;
-    width: 100%;
-    padding: 10px 20px 50px;
-    margin: 8px 0;
-    display: inline-block;
-    box-sizing: border-box;
-}
-
-.contact-form label{
-  color: #0c9e1b;
-  font-weight:bold;
-  position:relative; 
-  right:15px;
-  left:15px;
-  top:10px;
-  bottom:10px;
-
-}
-
-td {
-    padding: 0px 0px 20px 10px;
-}
-
-.contact-form input{
-    position:relative; 
-    right:10px;
-    left:20px;
-    top:10px;
-    bottom:10px;
-
-}
-
-.contact-label{
-    position:absolute;
-    margin-top: -12px;
-
-}
-
-#message {
-    width:50%;
-    position: relative;
-  
-}
-
-#submit{
-    display:block;
-    cursor: pointer;
+.contact-container{
+    background-color:#056676;
+    padding:7% 13%;
+    background-image:url("../Images/shattered.png");
     position:relative;
-    margin:10px 600px;
+    top: 600px;
+
 }
 
-.bottom-container{
-    margin-top:50px;
-    padding-top:10px;
-    padding-bottom:20px;
-    background-color:#0fd223ad;
-    background-image:url("../Images/white-bed-sheet.png");
-}
-
-.bottom-container h3{
-    margin-bottom:20px;
-}
+/* Button */
 
 .btn {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #0fd222), color-stop(1, #05a515) );
@@ -243,8 +179,20 @@ width:140px;
 	position:relative;
 	top:1px;
 }
-.footer-icon{
+
+.contact-me .social-icon{
+    display:inline-block;
     height:50px;
-    width:50px;
-    margin:10px 20px;
+    padding:5px;
+    text-align:center;
+
+}
+
+/* footer */
+.footer{
+    background-color:#056676;
+    background-image:url("../Images/shattered.png");
+    position:relative;
+    top:600px;
+
 }
